src/scss/core.scss
/* ... */
.userpic {
    float: right;
    padding-top: 9px;
    img {
        height: 54px;
        border: 1px solid $icon-color;
        border-radius: 3px;
    }
}

ul.navbar-nav {
    margin-top: 15px;
    margin-right:auto;
    margin-left:auto;
    float:none;
    width:340px;
    li {
        a {
            @extend %navi-link;
            color: $icon-color;
            padding: 10px 20px;
            &:hover, &:focus {
                background-color: transparent;
                color: $text-color;
            }
        }
    }
    li.active {
        a {
            color: $text-color;
        }
    }
}
.title-row {
    background-color: $titlebar-color;
    color: #ffffff;
    @include inner-shadow(0px, 7px, 7px, -4px, 0.2);
    h1 {
        font-size: 25px;
        margin: 14px 0;
    }
}

ul.side-links {
    list-style-type: none;
    padding: 0;
    li {
        a {
            @extend %navi-link;
            color: $grid-link;
            &:hover {
                color:$grid-link-hover;
            }
        }
    }
    li.active a{
        color:$grid-link-hover;
    }
}

ul.side-dropdown-links {
    padding-left: 18px;
    > li {
        list-style: none;
    }
}

/* LOGO */
.logo-main {
    @media (max-width: 1100px) and (min-width: 768px) {
        display: none;
    }
    @media (max-width: 480px) {
        padding-top: 10px;
        width: 200px;
    }
}

.logo-icon {
    display: none;
    @media (max-width: 1100px) and (min-width: 768px) {
        display: inline;
    }
}

#print-logo {
    display: none;
}

#print-qr-code {
    display: none;
}

/* CONTENT */
.main-container {
    margin-top: 15px;
    margin-bottom: 30px;
}

#content {
    .uppercase-header {
        line-height: 30px;
        font: 300 28px "Open Sans Condensed",sans-serif;
        text-transform: uppercase;
        color: $text-color;
        font-size: 40px;
        padding-bottom: 15px;
        margin: 0px;
    }

    h2.uppercase-header {
        font-size: 25px;
    }
}

/* GRID */
#grid-filter {
    padding-right: 15px;
    label {
        text-align: left;
    }
}
#grid.row {
    margin:0px;
    margin-top:15px;
}
@media (min-width: 992px){
#grid .col-md-4 {
    width: auto;
    padding-left: 0px;
    padding-right: 20px;
}}



ol.welcome-text li {
    padding-top: 10px;
}


/* custom rateit jquery-plugin styles */
.rateit .rateit-selected {
    background-position: left -32px;
}

/* share buttons */
#share {
    #share-buttons {
        //padding: 10px 15px 5px 15px;
        .share-button {
            margin-right: 3px;
            vertical-align: top;
            display: inline-block;
            line-height: 1;
            .fb-share {
                margin-top: -2px;
            }
            #tweet-button {
                width:60px !important;
            }
        }
        .share-link {
            vertical-align: top;
            display: inline-block;
            margin-left: 10px;
            a {
                color: #7f7179;
                font-weight: bold;
                font-size: 12px;
            }
            a:hover {
                text-decoration: underline;
            }
        }
    }
    #share-buttons.share-disabled {
        background-color: #ececec;
        opacity: 0.5;
        cursor: default;
        pointer-events: none;
    }
    #share-buttons ~ div {
        margin-top:10px;
        .form-group{
            label {
                margin-bottom: 0px;
                line-height: 34px;
            }
        }
    }
    margin-top: 10px;
    margin-bottom: 20px;
}


.modal-content {
    border-radius: 0px;
    border: 1px solid #bdbdc0;
    box-shadow: 0px 3px 6px #000;
    font-size: 13px;
    .modal-body > .row{
        margin:0px 30px;
        &:first-child{
            margin-right: 0px;
            .col-md-12 {
                padding-right:0px;
                button.close span {
                    font-size: 40px;
                    line-height: 24px;
                }
            }
        }
    }
    #badge-contents {
        margin:0px 45px;
    }
    .modal-header {
        border-bottom:none;
        padding-bottom: 0px;
        button span {
            font-size: 40px;
            line-height: 24px;
        }
    }
    .modal-footer {
        border-top:none;
        padding-top:0px;
        text-align: left;
    }
}
#my-files .modal-content {
    .modal-footer{
        margin-left: 0px;
    }
    .modal-body {
        padding-top:0px;
    }
}
.panel img {
    //max-width: 100%;
}
.alert-warning, .alert-danger{
    color:$dark-red;
    font-weight: bold;
    background: transparent;
    border:none;
    border-left:3px solid $dark-red;
    border-radius: 0px;
    box-shadow: none;
    font-size: 14px;
    padding:10px;
    margin-bottom:10px;
}

footer.footer {
    position: absolute;
    bottom: 0;
    height: 100px;
    width: 100%;
    clear:both;
    a {
	color: #7f7179;
    }
    .footer-container {
	text-align: center;
	border-top: 1px solid #dbdbdb;
	padding-top: 12px;
	font-size: 11px;
	font-weight: bold;
    }
}
.text-muted {
    color: #777;
}
/* ... */

